--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,24 @@
       margin-top: -150px;
 
     }
+
+  footer {
+    margin: 50px; 
+    text-align: center;
+  }
+ 
+  .loading {
+    position: fixed;
+    left: 0;
+    top: 0; 
+    bottom: 0;
+    right: 0;
+    z-index: 99;
+    background: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+  
