--- a/src/components/MovieRow/MovieRow.css
+++ b/src/components/MovieRow/MovieRow.css
@@ -10,8 +10,8 @@
     padding: 30pxs;
 
 }
-.movieRow--list{
-    width: 999999999px;
+.movieRow--list {
+    transition: all ease 0.6s;
 }
 
 .movieRow--item{
@@ -28,4 +28,40 @@
 .movieRow--item img:hover {
     transform: scale(1);
 
+}
+
+.movieRow--left, 
+.movieRow--right{
+    position: absolute;
+    width: 40px;
+    height: 225px;
+    z-index: 999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0,  0.6);
+    cursor: pointer;
+    opacity: 0;
+    transition: all ease 0.5s;
+}
+
+.movieRow--left{
+    left: 0;
+}
+
+.movieRow--right{
+    right: 0;
+}
+
+.movieRow:hover .movieRow--left,
+.movieRow:hover .movieRow--right{
+    opacity: 1;
+}
+
+@media (max-width: 760px){
+    .movieRow--left, 
+    .movieRow--right{
+        opacity: 1;
+    }
 }
